--- a/Tox21_Workshop.ipynb
+++ b/Tox21_Workshop.ipynb
@@ -3964,7 +3964,8 @@
           "height": 617
         },
         "id": "7REd38OKP_-h",
-        "outputId": "1f21f50c-8bf7-4c00-f1c6-2aab9edc787e"
+        "outputId": "1f21f50c-8bf7-4c00-f1c6-2aab9edc787e",
+        "collapsed": true
       },
       "execution_count": 4,
       "outputs": [
@@ -4533,7 +4534,8 @@
           "height": 791
         },
         "id": "pmcMWIQOQuxC",
-        "outputId": "fb27c5fe-0543-4aff-881c-278f0cd45501"
+        "outputId": "fb27c5fe-0543-4aff-881c-278f0cd45501",
+        "collapsed": true
       },
       "execution_count": 6,
       "outputs": [
